adding more css. chaning fonts and background color

--- a/boxmodel/index.html
+++ b/boxmodel/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>BYUI</title>
-    <link rel="stylesheet" href="boxmodel/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header>
